<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bitpulse</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="about_text">Bitpulse is written and developed by Eric Barch. Thank you for using Bitpulse and may the Satoshis treat you well! If you would like to help support future development, please consider clicking the donate BTC button below :)</string>
    <string name="contacting_text">(contacting exchange)</string>
    <string name="logo_desc">Bitpulse Logo</string>
    <string name="preference_currency">Currency</string>
    
    <string name="disconnected">disconnected</string>
    <string name="connected">connected</string>
    <string name="last_change">last change</string>
    <string name="dots">&#8230;</string>
    <string name="loading_vol">vol: ?</string>
    <string name="loading_ask">(loading) - ask</string>
    <string name="loading_bid">bid - (loading)</string>
    
	<string name="coinbase">coinbase (usd only)</string>
	<string name="bitstamp">bitstamp (usd only)</string>
	<string name="btce">btce</string>
	<string name="bitfinex">bitfinex (usd only)</string>
	<string name="btcchina">btcchina (cny only)</string>
	<string name="bitcoin_average">bitcoin average</string>
	<string name="campbx">campbx (usd only)</string>
	<string name="kraken">kraken</string>
	<string name="vault_of_satoshi">vault of satoshi</string>
	<string name="anx">anx</string>
    
</resources>
